# rust-snake

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
src/: board.rs  colors.rs  gameplay.rs  lib.rs  main.rs  snake.rs
