[package]
name = "rust-snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
itertools = "0.11.0"

# Following Bevy's recommendations
# https://bevyengine.org/learn/book/getting-started/setup/#create-a-new-bevy-project
[dev-dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
